...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/direction_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:backgroundTint="#83A300"
        android:onClick="onGetDirectionClicked"
        android:text="Get Direction!"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
...
